Pagina creditos estructurada

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
               >EXCLUSIVIDAD</a
             >
           </li>
-          <li><a href="#" class="lista__enlace">CRÉDITOS</a></li>
+          <li>
+            <a href="pages/creditos.html" class="lista__enlace">CRÉDITOS</a>
+          </li>
         </ul>
 
         <ul class="lista__paginas">
@@ -93,7 +95,11 @@
               >EXCLUSIVIDAD</a
             >
           </li>
-          <li><a href="#" class="lista__enlace--movil">CRÉDITOS</a></li>
+          <li>
+            <a href="pages/creditos.html" class="lista__enlace--movil"
+              >CRÉDITOS</a
+            >
+          </li>
         </ul>
 
         <div class="iconos__movil">
