--- a/pages/creditos.html
+++ b/pages/creditos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Fashion - Nosotros</title>
+    <title>Beauty Fashion - Equipo</title>
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body>
@@ -132,12 +132,12 @@
     <main>
       <section class="imagenes__principal imagenes__principal--nosotros">
         <h2 class="titulo__principal titulo__principal--nosotros">
-          Beauty Fashion, esto somos.
+          Beauty Fashion, nuestra familia.
         </h2>
         <article class="imagenes__contenedor">
           <div class="imagen">
             <img
-              src="../media/modelos/aboutus.jpg"
+              src="../media/modelos/familia.jpg"
               class="imagen__principal"
               alt=""
             />
@@ -145,58 +145,52 @@
         </article>
       </section>
       <section class="informacion__nosotros">
-        <p class="informacion__texto">
-          Beauty Fashion no es solo una marca. Es un movimiento. Es una familia.
-          Es una historia real.
-        </p>
-        <p class="informacion__texto">
-          Nacimos en Colombia en 2022, creados por un grupo de chicos de 18 años
-          desde Barranquilla, sin experiencia, sin contactos, sin apoyo… pero
-          con algo que lo cambia todo: pasión, visión y una ética de trabajo
-          salvaje.
-        </p>
-        <p class="informacion__texto">
-          Desde una habitación pequeña, con los recursos justos y mil dudas,
-          empezamos este camino con una sola idea en mente: crear algo
-          verdaderamente único. No solo ropa. No solo estética. Sino una energía
-          que se sienta cuando te vistes de Beauty.
-        </p>
+        <article class="contenedor__prendas">
+          <figure class="prenda">
+            <img
+              src="../media/productos/camisas/front_cami_roja.webp"
+              alt=""
+              class="prenda__imagen"
+            />
 
-        <h2 class="informacion__titulo">DE COLOMBIA AL MUNDO</h2>
+            <figcaption class="prenda__descripcion">
+              <h3>Esteban Monsalvo</h3>
+            </figcaption>
+          </figure>
+          <figure class="prenda">
+            <img
+              src="../media/productos/camisas/front_cami_roja.webp"
+              alt=""
+              class="prenda__imagen"
+            />
 
-        <p class="informacion__texto">
-          Hoy, gracias a ese esfuerzo y al apoyo de nuestra comunidad, hemos
-          llevado Beauty Fashion a los cinco continentes.
-        </p>
-        <p class="informacion__texto">
-          Hemos recibido miles de pedidos desde todas partes del mundo. Cientos
-          de artistas internacionales han vestido nuestras piezas. Y lo más
-          importante: hemos creado diseños nunca antes vistos en Colombia,
-          piezas que no solo visten, sino que cuentan algo.
-        </p>
-        <p class="informacion__texto">
-          Somos de aquí, pero nuestras referencias vienen de todo el planeta.
-          Fusionamos culturas, estéticas y energía global para dar forma a una
-          marca con alma propia. Cada prenda es una declaración.
-        </p>
+            <figcaption class="prenda__descripcion">
+              <h3>Abraham Valiente</h3>
+            </figcaption>
+          </figure>
+          <figure class="prenda">
+            <img
+              src="../media/productos/camisas/front_cami_roja.webp"
+              alt=""
+              class="prenda__imagen"
+            />
 
-        <h2 class="informacion__titulo">ESTO VA MÁS ALLÁ DE NOSOTROS</h2>
+            <figcaption class="prenda__descripcion">
+              <h3>Sebastián Bovea</h3>
+            </figcaption>
+          </figure>
+          <figure class="prenda">
+            <img
+              src="../media/productos/camisas/front_cami_roja.webp"
+              alt=""
+              class="prenda__imagen"
+            />
 
-        <p class="informacion__texto">
-          Beauty Fashion es disciplina. Es esfuerzo. Es no rendirse. Y esto no
-          lo decimos solo por nosotros, lo decimos por ti también.
-        </p>
-        <p class="informacion__texto">
-          Porque si nosotros, sin saber nada, sin recursos, desde una isla
-          pequeña, conseguimos llegar hasta aquí... tú también puedes con lo que
-          sea que te propongas.
-        </p>
-        <p class="informacion__texto">
-          Beauty Fashion representa a los que luchan, a los que no se conforman,
-          a los que no esperan a que las cosas pasen: las provocan. Si estás en
-          ese punto, si tú también lo sientes... Entonces ya formas parte de
-          esto. Ya eres parte de la familia
-        </p>
+            <figcaption class="prenda__descripcion">
+              <h3>David Mendoza</h3>
+            </figcaption>
+          </figure>
+        </article>
       </section>
     </main>
     <footer>
