--- a/pages/exclusividad.html
+++ b/pages/exclusividad.html
@@ -18,7 +18,7 @@
           <li>
             <a href="exclusividad.html" class="lista__enlace">EXCLUSIVIDAD</a>
           </li>
-          <li><a href="#" class="lista__enlace">CRÉDITOS</a></li>
+          <li><a href="creditos.html" class="lista__enlace">CRÉDITOS</a></li>
         </ul>
 
         <ul class="lista__paginas">
@@ -82,8 +82,14 @@
           <li>
             <a href="nosotros.html" class="lista__enlace--movil">NOSOTROS</a>
           </li>
-          <li><a href="#" class="lista__enlace--movil">EXCLUSIVIDAD</a></li>
-          <li><a href="#" class="lista__enlace--movil">CRÉDITOS</a></li>
+          <li>
+            <a href="exclusividad.html" class="lista__enlace--movil"
+              >EXCLUSIVIDAD</a
+            >
+          </li>
+          <li>
+            <a href="creditos.html" class="lista__enlace--movil">CRÉDITOS</a>
+          </li>
         </ul>
 
         <div class="iconos__movil">
