--- a/pages/exclusividad.html
+++ b/pages/exclusividad.html
@@ -23,7 +23,7 @@
 
         <ul class="lista__paginas">
           <li>
-            <a href="#"
+            <a href="login.html"
               ><svg
                 class="icono__enlace"
                 viewBox="0 0 24 24"
@@ -93,7 +93,7 @@
         </ul>
 
         <div class="iconos__movil">
-          <a href="#"
+          <a href="login.html"
             ><svg
               class="icono__enlace--movil"
               viewBox="0 0 24 24"
@@ -184,18 +184,18 @@
     <footer>
       <section class="footer__contenido">
         <ul class="footer__lista">
-          <li><h3 class="footer__subtitulo">Newsletter</h3></li>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d125341.72781375362!2d-74.8816145901892!3d10.968732231406614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x8ef42d7f3319999f%3A0x49ce2be74aaf8e48!2sCl.%2053c%20%23%2022-04%2C%20Suroccidente%2C%20Barranquilla%2C%20Atl%C3%A1ntico!3m2!1d10.9687433!2d-74.7992127!5e0!3m2!1ses!2sco!4v1751347387794!5m2!1ses!2sco"
+            width="250"
+            height="150"
+            style="border: 0; border-radius: 15px"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
           <li>
-            <p class="footer__descripcion">
-              Sign up to our newsletter to receive exclusive offers.
-            </p>
+            <a href="#" class="footer__enlace">Cl. 53c # 22-04 Barranquilla</a>
           </li>
-          <input
-            type="text"
-            placeholder="Correo Electrónico"
-            class="footer__input"
-          />
-          <button class="footer__boton">Suscribirse</button>
         </ul>
         <ul class="footer__lista">
           <li><a href="#" class="footer__enlace">Terms of Service</a></li>
@@ -203,7 +203,6 @@
           <li><a href="#" class="footer__enlace">Refund Policy</a></li>
           <li><a href="#" class="footer__enlace">Privacy Policy</a></li>
           <li><a href="#" class="footer__enlace">Legal Notice</a></li>
-          <li><a href="#" class="footer__enlace">Contact Information</a></li>
         </ul>
       </section>
     </footer>
